# GivLocally

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
givlocally/: __init__.py  config.py  display.py  forecast.py  main.py  reader.py  server.py  settings.py  writer.py
givlocally/templates/: index.html  layout.html
